error.txt
src/Factory.cpp:58:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
1 warning generated.
In file included from src/Hand.cpp:1:
In file included from src/Hand.hpp:1:
In file included from /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/vector:265:
In file included from /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/__bit_reference:15:
In file included from /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/algorithm:627:
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/memory:1641:31: error: allocating an object of abstract class type 'Card'
            ::new((void*)__p) _Up(_VSTD::forward<_Args>(__args)...);
                              ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/memory:1568:18: note: in instantiation of function template specialization 'std::__1::allocator<Card>::construct<Card, Card &>' requested here
            {__a.construct(__p, _VSTD::forward<_Args>(__args)...);}
                 ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/memory:1449:14: note: in instantiation of function template specialization 'std::__1::allocator_traits<std::__1::allocator<Card> >::__construct<Card, Card &>' requested here
            {__construct(__has_construct<allocator_type, pointer, _Args...>(),
             ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/vector:963:25: note: in instantiation of function template specialization 'std::__1::allocator_traits<std::__1::allocator<Card> >::construct<Card, Card &>' requested here
        __alloc_traits::construct(__a, _VSTD::__to_raw_pointer(this->__end_), *__first);
                        ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/vector:1160:9: note: in instantiation of function template specialization 'std::__1::vector<Card, std::__1::allocator<Card> >::__construct_at_end<Card *>' requested here
        __construct_at_end(__x.__begin_, __x.__end_);
        ^
src/Hand.cpp:4:9: note: in instantiation of member function 'std::__1::vector<Card, std::__1::allocator<Card> >::vector' requested here
        return _hand;
               ^
src/Card.hpp:13:16: note: unimplemented pure virtual method 'action' in 'Card'
                virtual void action()=0;
                             ^
In file included from src/Hand.cpp:1:
In file included from src/Hand.hpp:1:
In file included from /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/vector:265:
In file included from /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/__bit_reference:15:
In file included from /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/algorithm:627:
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/memory:1641:31: error: allocating an object of abstract class type 'Card'
            ::new((void*)__p) _Up(_VSTD::forward<_Args>(__args)...);
                              ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/memory:1568:18: note: in instantiation of function template specialization 'std::__1::allocator<Card>::construct<Card, const Card &>' requested here
            {__a.construct(__p, _VSTD::forward<_Args>(__args)...);}
                 ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/memory:1449:14: note: in instantiation of function template specialization 'std::__1::allocator_traits<std::__1::allocator<Card> >::__construct<Card, const Card &>' requested here
            {__construct(__has_construct<allocator_type, pointer, _Args...>(),
             ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/vector:1538:25: note: in instantiation of function template specialization 'std::__1::allocator_traits<std::__1::allocator<Card> >::construct<Card, const Card &>' requested here
        __alloc_traits::construct(this->__alloc(),
                        ^
src/Hand.cpp:8:8: note: in instantiation of member function 'std::__1::vector<Card, std::__1::allocator<Card> >::push_back' requested here
        _hand.push_back(c);
              ^
In file included from src/Hand.cpp:1:
In file included from src/Hand.hpp:1:
In file included from /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/vector:265:
In file included from /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/__bit_reference:15:
In file included from /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/algorithm:627:
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/memory:1641:31: error: allocating an object of abstract class type 'Card'
            ::new((void*)__p) _Up(_VSTD::forward<_Args>(__args)...);
                              ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/memory:1568:18: note: in instantiation of function template specialization 'std::__1::allocator<Card>::construct<Card, Card>' requested here
            {__a.construct(__p, _VSTD::forward<_Args>(__args)...);}
                 ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/memory:1449:14: note: in instantiation of function template specialization 'std::__1::allocator_traits<std::__1::allocator<Card> >::__construct<Card, Card>' requested here
            {__construct(__has_construct<allocator_type, pointer, _Args...>(),
             ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/memory:1531:17: note: in instantiation of function template specialization 'std::__1::allocator_traits<std::__1::allocator<Card> >::construct<Card, Card>' requested here
                construct(__a, _VSTD::__to_raw_pointer(__end2-1), _VSTD::move_if_noexcept(*--__end1));
                ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/vector:839:21: note: in instantiation of function template specialization 'std::__1::allocator_traits<std::__1::allocator<Card> >::__construct_backward<Card *>' requested here
    __alloc_traits::__construct_backward(this->__alloc(), this->__begin_, this->__end_, __v.__begin_);
                    ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/vector:1528:5: note: in instantiation of member function 'std::__1::vector<Card, std::__1::allocator<Card> >::__swap_out_circular_buffer' requested here
    __swap_out_circular_buffer(__v);
    ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/vector:1543:9: note: in instantiation of function template specialization 'std::__1::vector<Card, std::__1::allocator<Card> >::__push_back_slow_path<const Card &>' requested here
        __push_back_slow_path(__x);
        ^
src/Hand.cpp:8:8: note: in instantiation of member function 'std::__1::vector<Card, std::__1::allocator<Card> >::push_back' requested here
        _hand.push_back(c);
              ^
3 errors generated.
make: *** [obj/Hand.o] Error 1
